# xprotocol

./: Cargo.toml  README.md  build.rs
proto/: xprotocol.proto
src/: auth.rs  circuit_breaker.rs  client.rs  config.rs  discovery.rs  error.rs  grpc.rs  handler.rs  lib.rs  metrics.rs  pool.rs  protocol.rs  runtime.rs  schema.rs  server.rs  session.rs  shutdown.rs  socket.rs  streaming.rs  tcp.rs  tests.rs  tls.rs  utils.rs  webhook.rs  wire.rs  xprotocol.v1.rs
