[package]
name = "protocol"
version = "0.1.0"
edition = "2021"
authors = ["Developer"]
description = "Distributed Service protocolunication Framework - Built on pingora"
license = "MIT"

[features]
default = ["json", "msgpack", "grpc_tls"]
json = []
msgpack = ["rmp", "rmp-serde"]
grpc_tls = ["tonic/tls"]

[build-dependencies]
prost-build = "0.12"
tonic-build = "0.10"

[dependencies]
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
serde = { version = "1", features = ["derive"] }
erased-serde = "0.4"
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
uuid = { version = "1", features = ["v4", "serde"] }
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
tracing = "0.1"
rand = "0.8"
rmp = { version = "0.8", optional = true }
rmp-serde = { version = "1.3", optional = true }
tempfile = "3"
async-trait = "0.1"
dashmap = "6"
parking_lot = "0.12"
bytes = "1"
http = "1"
smallvec = "1"
reqwest = { version = "0.12", features = ["json"] }
num_cpus = "1"
tonic = "0.12"
prost = "0.13"
tokio-native-tls = "0.3"
native-tls = "0.2"
rustls = "0.23"
tokio-rustls = "0.26"
rustls-native-certs = "0.7"
rustls-pemfile = "2"

# pingora components
pingora = { version = "0.8", features = ["lb"] }
pingora-load-balancing = "0.8"
pingora-memory-cache = "0.8"
pingora-pool = "0.8"
pingora-runtime = "0.8"

[dev-dependencies]
tokio-test = "0.4"
